--- a/css/styles.css
+++ b/css/styles.css
@@ -1385,6 +1385,7 @@ p, li, a {
   font-weight: 600; /* Bold for emphasis */
   font-size: 1.4em;
   margin-bottom: 10px;
+  text-align: left;
 }
 
 .feature-label.sublabel {
